# crypton-sweep

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  publish-crate.yml  release.yml
docs/: architecture.md  features.md  releasing.md
examples/: industry-fleet-synthetic.json  sample.cdx.json
scripts/: install.sh  serve_report.py
src/: main.rs
templates/: report.html
