[package]
name = "crypton-sweep"
version = "0.1.0"
edition = "2021"
description = "Authorized network cipher sweeper and PQC migration report generator"
license = "Apache-2.0"
repository = "https://github.com/crypton-protocol/crypton-sweep"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

