[package]
name = "crypton-sweep"
version = "0.1.0"
edition = "2021"
description = "Authorized network cipher sweeper and PQC migration report generator"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Gulshan-gaur/crypton-sweep"
homepage = "https://github.com/Gulshan-gaur/crypton-sweep"
keywords = ["pqc", "cryptography", "sbom", "cbom", "network-security"]
categories = ["command-line-utilities", "cryptography", "network-programming"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
